# html2word

./: .gitignore  4.0.0  BLUE_BADGE_FIX_SUMMARY.md  CAIRO_SETUP_INSTRUCTIONS.md  CLAUDE.md  CSS_OPTIMIZATION_PLAN.md  EXTRACTION_SUMMARY.txt  FIXES_SUMMARY.md  GEMINI.md  HEADER_FOOTER_USAGE.md  IMPROVEMENT_REPORT.md  LICENSE  LOCAL_IMAGES_README.md  NEXT_STEPS_EXTRACTION_SUMMARY.txt  OFFLINE_DEPLOYMENT_GUIDE.md  README.md  SPACING_FIX_EXPLANATION.md  SPACING_IMPROVEMENTS_REPORT.md  SVG_FIX_SUMMARY.md  SVG_SETUP_GUIDE.md  TEST_REPORT.md  VERIFICATION_COMPLETE.md  analyze_oversear.py  analyze_structure.py  check_alignment.py  check_real_table.py  compare_regression.py  compare_spacing.py  count_all_spacings.py  create_offline_package.py  debug_bg_color.py  debug_css.py  debug_margins.py  debug_section_margins.py  debug_styles.py  debug_table_conversion.py  deploy_offline_package.py  diagnose_spacing.py  diagnose_svg.py  download_test_images.py  (+118 more)
.claude/: settings.local.json
config/: default_styles.yaml  font_mapping.yaml
docs/: code_index.md  底图文字前端开发规范.md  蓝背景前端开发规范.md
examples/: complex_tables_test.html  comprehensive.html  simple_text.html  with_table.html
html2word-offline-20251122_233152/: OFFLINE_PACKAGE_README.md  activate_venv.bat  activate_venv.sh  html2word-converter.bat  requirements.txt  setup.py
tests/: __init__.py
wiki_docs/: 01_Introduction.md  02_Architecture.md  03_Parser_Module.md  04_Style_Module.md  05_Word_Builder.md  06_Utils.md  07_CLI_API.md  08_Configuration.md  Blue_Tag_Badge_Style_Analysis.md  Log_Reduction_Section_Location.md  README.md
(+60 files in other folders)
